Actually hopefully fix scrolling on main widget
There was still some stuff being cut off. This seems to fix it.

Sometimes I really hate CSS...

--- a/frontend/src/mainframe/mainframe.module.css
+++ b/frontend/src/mainframe/mainframe.module.css
@@ -36,7 +36,15 @@
 
 .pageBody {
     width: 100%;
-    overflow: auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.selectedPage {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .versionLink {
